# briefcase

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  config.example.toml  opencode.json  rustfmt.toml  test_setup.sh
.PRD/v1/: config.default.toml  config.testing.toml  constitution.md  plan.md  specify.md
.PRD/v2/: branch-ci.md  branch-remote.md  branch-xdg.md
.cargo/: config.toml
.draft/: 000-temp.md  002-specify.md  config.default.toml  config.testing.toml  opencode.json.md  prd__.md  specify.md
.draft/prd/: config.default.toml  config.testing.toml  constitution.md  specify.md
.github/workflows/: ci.yml  opencode.yml
.opencode/: config.json  opencode.json
.reports/: spec_report.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  USAGE.md  todo.md
docs/development/: architecture.md  contributing.md  security.md  sensitive-data-backup.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/operations/: rclone-remotes.md  troubleshooting.md
docs/reference/: archive-format.md  cli.md  config.md  logging.md  platform-support.md  storage-layout.md
docs/release/: README.md  changelog.md  process.md
docs/user-guide/: backup.md  commands.md  configuration.md  maintenance.md  recovery.md  scheduling.md  sync.md
draft/: 001-constituion.md  clarify.md  constitution.md  opencode_1.json  plan.md  prd.md  specify.md
scripts/: install.ps1  install.sh
specs/001-backup-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-backup-system/checklists/: requirements.md
specs/001-backup-system/contracts/: cli_contracts.md
specs/001-sensitive-data-backup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sensitive-data-backup/checklists/: requirements.md
specs/001-sensitive-data-backup/contracts/: backup.json  config.json  crypto.json  sync.json
src/: clean.rs  config.rs  lib.rs  logging.rs  main.rs
src/backup/: compress.rs  firefox.rs  folder.rs  mod.rs  retention.rs  service.rs
src/cli/: backup.rs  clean.rs  config.rs  crypto.rs  install.rs  mod.rs  schedule.rs  sync.rs  uninstall.rs
src/config/: manager.rs  mod.rs  setup.rs  validator.rs
src/crypto/: encrypt.rs  hashgen.rs  keygen.rs  mod.rs
src/logging/: mod.rs
src/models/: backup.rs  backup_file.rs  config.rs  crypto.rs  log_entry.rs  mod.rs  remote_config.rs  sync.rs  temp_dir.rs
src/scheduler/: daemon.rs  service.rs
src/sync/: mod.rs  rclone.rs  service.rs
tests/: simple_setup_test.rs  test_backup.rs  test_backup_command.rs  test_cli.rs  test_config_password.rs  test_crypto.rs  test_daemon.rs  test_full_workflow.rs  test_remote_config.rs  test_restore.rs  test_schedule_config.rs  test_scheduler.rs  test_sync.rs  test_sync_command.rs
tests/integration/: setup_test.rs
tests/unit/: test_backup_file.rs  test_config.rs
