[package]
name = "briefcase"
version = "1.0.0"
edition = "2021"
description = "CLI application for backing up small-size personal sensitive data"
authors = ["br8km"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/br8km/briefcase"
keywords = ["backup", "encryption", "cli"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
sevenz-rust = "0.6"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
rand = "0.8"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
aead = "0.5"
zeroize = "1.0"
base64 = "0.22"
rpassword = "7.0"
nix = { version = "0.26", features = ["process"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true          # Enable Link-Time Optimization
strip = "debuginfo" # Strip debug information
# You can also use 'strip = "all"' for maximum effect, but this can impact crash reports